<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".RecActivity">

    <Button
        android:id="@+id/localButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button"
        android:text="Local"
        app:layout_constraintStart_toStartOf="@+id/rec"
        app:layout_constraintTop_toBottomOf="@+id/rec" />

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_image"
        android:contentDescription="album art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumArt" />

    <Button
        android:id="@+id/dislikeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:text="Dislike"
        app:layout_constraintBottom_toTopOf="@+id/rec"
        app:layout_constraintEnd_toEndOf="@+id/albumArt" />

    <Button
        android:id="@+id/rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:text="Recommend"
        app:layout_constraintEnd_toEndOf="@+id/dislikeBtn"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/likeBtn"
        app:layout_constraintTop_toBottomOf="@+id/analysis" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/rounded_button"
        android:text="History"
        app:layout_constraintEnd_toEndOf="@+id/rec"
        app:layout_constraintTop_toBottomOf="@+id/rec" />

    <Button
        android:id="@+id/likeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_button"
        android:text="Like"
        app:layout_constraintBottom_toTopOf="@+id/rec"
        app:layout_constraintStart_toStartOf="@+id/albumArt" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_button"
        android:text="delete saved data"
        android:textColor="#FF0000"
        android:onClick="delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rec" />


</androidx.constraintlayout.widget.ConstraintLayout>